CS_SBOX_20150209_01/Metadata/unpackaged/objects/Renewal_Rep_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Renewal Rep History</relationshipLabel>
        <relationshipName>Renewal_Rep_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Changed__c</fullName>
        <label>Date Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Rep_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Rep_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Renewal Rep History</label>
    <nameField>
        <displayFormat>RRH-{0000}</displayFormat>
        <label>Renewal Rep History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Rep History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>